# pandas

./: pyproject.toml
pandas/: first_file.py
tests/: test_pandas.py
